# PedalSwitcher

./: .gitignore  README.md  board_profile.py  io_channel_select.py  options.py  pedalboard_config.py  serial_select.py  serial_test.py  test_profile.pbcfg
.west/: config
AudioSwitcher/: AudioSwitcher-cache.lib  AudioSwitcher.sch  AudioSwitcher.sch-bak
SwitcherFirmware/src/: TestCode.cpp  gpio.cpp  gpio.hh  main.h  mux.hh  shift_register.hh
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay
app/inc/: etl_profile.h
app/src/: main.cpp
old/: demo_profile.txt  serial_select.py
old/AudioSwitcher/: AudioSwitcher-cache.lib
old/SwitcherFirmware/: platformio.ini
old/SwitcherFirmware/src/: TestCode.cpp  shift_register.hh
old/pedal_board/: pedal_board.ino
pedal_board/: pedal_board.ino
serial_read/: pb_sync_demo.ino  serial_read.ino
